# cuda-loops

./: CMakeLists.txt  cuda-loops.sln  cuda-loops.vcxproj  cuda-loops.vcxproj.filters
src/: MDLoopInfo.cpp  MDLoopInfo.h  PragmaHandling.cpp  PragmaHandling.h  TokenDB.cpp  TokenDB.h  main.cpp
src/dvm/: pragmas.cpp  pragmas.h
src/handler-gen/: AcrossGen.cpp  AcrossGen.h  HandlerGen.cpp  HandlerGen.h  NoAcrossGen.cpp  NoAcrossGen.h
tests/blank-handlers/: adi.DVMH_blank.c  adi_m.DVMH_blank.c  align21_blank.c  sor.DVMH_blank.c  sor_blank.c
tests/cdv-fdv-src/: adi_m.cdv
tests/cuda-handlers/: adi.DVMH_cuda.cu  adi.DVMH_cuda_c.cu  adi.DVMH_cuda_c_hand.cu  new-cuda-handler.cu  sor.DVMH_cuda_c.cu
tests/dvm/: dvm  usr.par
tests/dvm/adic/: adi.DVMH.c  adi.DVMH_cuda.cu  adi.DVMH_cuda_info.c
tests/dvm/adift/: adi.DVMH.f  adi.DVMH_cuda.cu  adi.DVMH_cuda_info.c
